# wii-gb-operator

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  boot.dol  meta.xml  settings.ini
.claude/: settings.local.json
borders/gba/: border_AXVE.aseprite  border_BPRE.aseprite  border_BPRE24bpp.aseprite  gba_border_template.aseprite
logs/test_122/: log.txt
source/: cart_sync.c  cart_sync.h  cartindex.c  cartindex.h  dol_reload.c  dol_reload.h  game_titles.h  gametitles.c  gametitles.h  gb_operator.c  gb_operator.h  log.h  main.c  mgba_frontend.c  mgba_frontend.h  rom_cache.c  rom_cache.h  settings.c  settings.h
